--- a/server/Makefile
+++ b/server/Makefile
@@ -1,11 +1,11 @@
 ##
 ## Makefile for Zappy in /home/jonathan/Projets/Tek-2/C/Zappy/server
-## 
+##
 ## Made by Jonathan Machado
 ## Login   <jonathan.machado@epitech.net>
-## 
+##
 ## Started on  Sat May 12 14:30:37 2012 Jonathan Machado
-## Last update Mon May 14 20:34:45 2012 Jonathan Machado
+## Last update Mon Jun  4 16:22:58 2012 lois burg
 ##
 
 CC		= gcc
@@ -13,10 +13,10 @@ CC		= gcc
 NAME		= zappyd
 
 SRCS_DIR	= srcs/
-INC_DIR		= includes/ 
+INC_DIR		= includes/
 OBJS_DIR	= objs/
 
-CFLAGS		+= -W -Wall -Werror -O3
+CFLAGS		+= -W -Wall -Werror -O3 -g3
 IFLAGS		+= -I $(INC_DIR) -I lib
 LFLAGS		+= -Llib -ldata
 
