--- a/server/Makefile
+++ b/server/Makefile
@@ -5,7 +5,7 @@
 ## Login   <jonathan.machado@epitech.net>
 ##
 ## Started on  Sat May 12 14:30:37 2012 Jonathan Machado
-## Last update Tue Jul  3 18:35:08 2012 lois burg
+## Last update Wed Jul 11 15:12:35 2012 lois burg
 ##
 
 CC		= gcc
@@ -20,7 +20,7 @@ LIB_DIR		= lib/
 CFLAGS		+= -W -Wall -Werror -g3 #-O3
 IFLAGS		+= -I $(INC_DIR) -I lib
 LFLAGS		+= -Llib -ldata -lm
-DFLAGS		+= -D_BSD_SOURCE -D_XOPEN_SOURCE
+DFLAGS		+= -D_BSD_SOURCE -D_XOPEN_SOURCE -D_GNU_SOURCE
 
 SRCS		+= $(wildcard $(SRCS_DIR)*.c)
 
