Retrait du flag de debug

--- a/server/Makefile
+++ b/server/Makefile
@@ -5,7 +5,7 @@
 ## Login   <jonathan.machado@epitech.net>
 ##
 ## Started on  Sat May 12 14:30:37 2012 Jonathan Machado
-## Last update Wed Jul 11 15:12:35 2012 lois burg
+## Last update Sun Jul 15 15:40:39 2012 lois burg
 ##
 
 CC		= gcc
@@ -17,7 +17,7 @@ INC_DIR		= includes/
 OBJS_DIR	= objs/
 LIB_DIR		= lib/
 
-CFLAGS		+= -W -Wall -Werror -g3 #-O3
+CFLAGS		+= -W -Wall -Werror
 IFLAGS		+= -I $(INC_DIR) -I lib
 LFLAGS		+= -Llib -ldata -lm
 DFLAGS		+= -D_BSD_SOURCE -D_XOPEN_SOURCE -D_GNU_SOURCE
